--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
 
     <!-- Required meta tags -->
     <meta charset="utf-8">
+	<meta name="description" content="Various equipments for fitness">
+	<meta name"keywords" content="fitness, equipments, health">
+	<meta name="author" content="Vastvik Sewani">
+	<meta name="robot" content="nosnippet">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	
     
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
