meta tags modified

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
 	<meta name="description" content="Various equipments for fitness for home as well as commercial use.">
-	<meta name="keywords" content="fitness, equipments, health">
+	<meta name="keywords" content="fitness, equipments, weights, health">
 	<meta name="author" content="Vastvik Sewani">
 	<meta name="robots" content="nosnippet">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
