--- a/about.html
+++ b/about.html
@@ -41,13 +41,13 @@
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link active" href="index.html">Home</a>
+          <a class="nav-link" href="index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#equipments">Equipments</a>
+          <a class="nav-link" href="index.html#equipments">Equipments</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="about.html">About</a>
+          <a class="nav-link active" href="about.html">About</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="contact.html">Contact</a>
@@ -57,31 +57,14 @@
   </div>
 </nav>
 </div>
-<div id="main">
-  <br>
-<p>Best place to start your Fitness Journey!</p>
-</div>
+
+ <div id="about">
+   <h1>About Us</h1>
+   <p>We’ve seen a lot of change in the fitness industry over the years, but our philosophy has remained the same: to offer the best equipment, range of classes, knowledgeable staff and personal advice in a welcoming environment that feeds our members’ motivation.</p>
+   <p>We are an ambitious company and we’re always looking for great people to join our team – from personal trainers, group exercise instructors and club managers to our front-of-house teams. We’re committed to training, so you’ll be encouraged to improve your existing skills while you develop new ones.</p>
+
+ </div>
 <hr>
-<div class="container" id="equipments">
-    <h1>Equipments</h1>
-    <div class="row">
-
-     <div class="col-md-4">
-       <p class="title">Weights</p>
-       <img src="weights.jpg">
-      </div>
-
-      <div class="col-md-4">
-       <p class="title">Treadmills</p>
-       <img src="treadmills.jpg">
-      </div>
-
-      <div class="col-md-4">
-        <p class="title">Machines</p>
-        <img src="machines.jpg">
-      </div>
-   </div>
-  </div>
 
  
 </body>
